--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 body{
 background-color:hsl(0, 100%, 74%);
 background-image: url("./images/bg-intro-desktop.png");
-Font size: 16px;
-width:1440px;
-display: inline;
 }
 
 
@@ -11,12 +8,11 @@ body h1{
 width: 30%;
 padding: 40px;
 color: #FFFFFF;
-font-size: 40px;
+font-size: 60px;
+position:absolute;
+left:160px;
+top:200px;
 
-margin: 0;
-position: absolute;               /* 2 */
-top: 50%;                         /* 3 */
-transform: translate(0, -50%)
 }
 body p{
 font-size: 20px;
@@ -25,34 +21,43 @@ font-size: 20px;
 body h3 {
 
 background-color:hsl(248, 32%, 49%);
-
+border: 20px solid hsl(248, 32%, 49%);
+border-radius: 10px;
+color: #FFFFFF;
+text-align:center;
 
 }
 
 
 section {
-width: 30%;
-padding: 40px;
-float: right
-
+width:35%;
+padding: 35px;
+position:absolute;
+right:160px;
+top:40px;
 
 }
 
 
 .formulario{
 background:white;
-padding: 40px;
-
+border: 30px solid white;
+border-radius: 10px;
 }
 
 input {
-height: 40px;
-width:360px;
+
 border-radius: 10px;
 border-color:hsl(0, 100%, 74%);
-display: block;
-margin: 0 auto;
+width: 100%;
+height: 40px;
 
+
+
+}
+
+input label{
+    text-align:right;
 }
 
 .attribution { 
@@ -69,5 +74,27 @@ color: hsl(228, 45%, 44%);
 .botao{
 background:hsl(154, 59%, 51%);
 border-color:hsl(154, 59%, 51%);
+color:white;
+font-size:20px;
+}
 
+#termo {
+
+color:red;
+}
+
+h4 {
+    text-align:center;
+}
+
+label {
+
+    text-align:center;
+}
+
+#descricao {
+
+text-align:right;
+font-size:15px;
+color:red;
 }
