--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,8 @@ border-radius: 10px;
 input {
 
 border-radius: 10px;
-border-color:hsl(0, 100%, 74%);
 width: 100%;
-height: 40px;
+height: 50px;
 
 
 
@@ -85,7 +84,7 @@ color: hsl(228, 45%, 44%);
 
 }
 
-.botao{
+#botao{
 background:var(--Green-color);
 border-color:hsl(154, 59%, 51%);
 color:white;
@@ -106,7 +105,7 @@ label {
     text-align:center;
 }
 
-#descricao {
+#descricao1, #descricao2, #descricao3, #descricao4{
 
 text-align:right;
 font-size:15px;
