--- a/css/style.css
+++ b/css/style.css
@@ -59,18 +59,15 @@ border: 30px solid white;
 border-radius: 10px;
 }
 
-input {
+.formulario input {
 
 border-radius: 10px;
 width: 100%;
 height: 50px;
+font-size: 16px;
+margin-top:10px;
+border: 1px solid black;
 
-
-
-}
-
-input label{
-    text-align:right;
 }
 
 .attribution { 
@@ -110,4 +107,38 @@ label {
 text-align:right;
 font-size:15px;
 color:red;
+
+}
+
+span{
+    text-align:left;
+
+}
+
+.form-control {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+div{
+
+   text-align: right;
+}
+
+.control{
+   
+
+
+}
+
+
+
+.erro{
+    
+    background-image: url('./images/icon-error.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+    border: 2px solid red;
+
 }
